// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`login 1`] = `
Object {
  "email": "general_user_test@example.com",
  "emailVerified": true,
  "firstName": "General User",
  "id": 1,
  "lastName": "Test",
}
`;

exports[`login email required validation 1`] = `
Object {
  "feedback": Object {
    "email": Array [
      "A valid email is required.",
    ],
  },
  "message": "Validation Error",
}
`;

exports[`login password required validation 1`] = `
Object {
  "feedback": Object {
    "password": Array [
      "A valid password is required.",
    ],
  },
  "message": "Validation Error",
}
`;

exports[`login with invalid credentials 1`] = `
Object {
  "message": "Incorrect email or password",
}
`;
